Add initial unit tests (#73)
* Apply cargo fmt

* Add missing class and method comments to fix warnings

* Add tests for querying from CSV and Parquet data

* Run tests in CI