@@ -12,6 +12,11 @@ dependencies {
     implementation 'org.apache.arrow:arrow-format:13.0.0'
     implementation 'org.apache.arrow:arrow-vector:13.0.0'
     runtimeOnly 'org.apache.arrow:arrow-memory-unsafe:13.0.0'
+    testImplementation 'org.junit.jupiter:junit-jupiter:5.8.1'
+    testImplementation 'org.apache.hadoop:hadoop-client:3.3.5'
+    testImplementation 'org.apache.hadoop:hadoop-common:3.3.5'
+    testImplementation 'org.apache.parquet:parquet-avro:1.13.0'
+    testImplementation 'org.apache.parquet:parquet-hadoop:1.13.0'
 }
 
 spotless {
@@ -33,6 +38,12 @@ javadoc {
     if (JavaVersion.current().isJava9Compatible()) {
         options.addBooleanOption('html5', true)
     }
+}
+
+test {
+    def libraryPath = findProperty("JNI_PATH") ?: "$rootDir/datafusion-java/build/jni_libs/dev"
+    jvmArgs += ["-Djava.library.path=$libraryPath", "--add-opens=java.base/java.nio=ALL-UNNAMED"]
+    useJUnitPlatform()
 }
 
 def cargoBinary = "${System.getProperty('user.home')}/.cargo/bin/cargo"
